@@ -7,6 +7,7 @@
   enable qsub reporting of job rejection reason
   add suspend/resume diagnostics and logging
   prevent stale job handler from destroying suspended jobs
+  prevent rapid hello from MOM from doing DOS on pbs_server
 
 2.0.0p7
 
